SET(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/ruby)

IF (NOT DEFINED RUBY_INCLUDE_PATH OR NOT DEFINED RUBY_LIBRARY)
	FIND_PACKAGE( Ruby )
ENDIF (NOT DEFINED RUBY_INCLUDE_PATH OR NOT DEFINED RUBY_LIBRARY)

IF (DEFINED RUBY_LIB)
	SET(RUBY_LIBRARY ${RUBY_LIB})
ENDIF (DEFINED RUBY_LIB)

IF (DEFINED RUBY_INCLUDE_PATH)
   SET(RUBY_INCLUDE_DIR ${RUBY_INCLUDE_PATH})
ENDIF (DEFINED RUBY_INCLUDE_PATH)

IF (DEFINED RUBY_INCLUDE_DIRS)
   SET(RUBY_INCLUDE_DIR ${RUBY_INCLUDE_DIRS})
ENDIF (DEFINED RUBY_INCLUDE_DIRS)

IF (NOT DEFINED RUBY_INCLUDE_PATH OR NOT DEFINED RUBY_LIBRARY)
	IF (NOT IS_DIRECTORY ${RUBY_INCLUDE_DIR})
		 MESSAGE(WARNING ": path RUBY_INCLUDE_PATH not found. Use Add Entry to add it")
	ENDIF (NOT IS_DIRECTORY ${RUBY_INCLUDE_DIR})
	IF (NOT DEFINED RUBY_LIBRARY)
		 MESSAGE(WARNING ": filepath RUBY_LIB not found. Use Add Entry to add it")
	ENDIF (NOT DEFINED RUBY_LIBRARY)
ELSE (NOT DEFINED RUBY_INCLUDE_PATH OR NOT DEFINED RUBY_LIBRARY)

MESSAGE(STATUS "Using Ruby library: ${RUBY_LIBRARY}")

IF ( WIN32 )
  ADD_DEFINITIONS(-D_WIN32)
  IF (MINGW)
	 ADD_DEFINITIONS(-D__MINGW32__)
  ENDIF(MINGW)
ENDIF( WIN32 )

INCLUDE_DIRECTORIES( BEFORE ${RUBY_INCLUDE_DIR} )
ADD_DEFINITIONS(-DLIB_EXPORTS=0)

ADD_LIBRARY( tcruby
  SHARED
  runruby.c
  tinkercell_wrap.c
)

TARGET_LINK_LIBRARIES( tcruby
tcruby
tinkercellapi
${RUBY_LIBRARY}
)

INSTALL(TARGETS tcruby DESTINATION ruby)
FILE(GLOB RUBY_SCRIPTS *.rb)
INSTALL(FILES ${RUBY_SCRIPTS} DESTINATION ruby )

ENDIF (NOT DEFINED RUBY_INCLUDE_PATH OR NOT DEFINED RUBY_LIBRARY)

