FILE(GLOB PYTHONPLUGINS python/*.py)
INSTALL(FILES ${PYTHONPLUGINS} DESTINATION python)

FILE(GLOB OCTAVEPLUGINS octave/*.m)
INSTALL(FILES ${OCTAVEPLUGINS} DESTINATION python)

INSTALL(DIRECTORY Lab DESTINATION bin/../
          PATTERN ".svn" EXCLUDE)

INSTALL(DIRECTORY Modules DESTINATION bin/../
          PATTERN ".svn" EXCLUDE)

