FILE(GLOB PYTHONPLUGINS python/*.py)
INSTALL(FILES ${PYTHONPLUGINS} DESTINATION ${TINKERCELL_PACKAGE_ROOT_DIR}/python)

FILE(GLOB OCTAVEPLUGINS octave/*.m)
INSTALL(FILES ${OCTAVEPLUGINS} DESTINATION ${TINKERCELL_PACKAGE_ROOT_DIR}/python)

INSTALL(DIRECTORY Lab DESTINATION ${TINKERCELL_PACKAGE_ROOT_DIR}
	      PATTERN ".svn" EXCLUDE)

INSTALL(DIRECTORY Modules DESTINATION ${TINKERCELL_PACKAGE_ROOT_DIR}
	      PATTERN ".svn" EXCLUDE)

