FILE(GLOB WIN32_GCC_FILES *.o gcc.exe cc1.exe ld.exe as.exe)
FILE(GLOB WIN32_DLL_FILES *.dll *.DLL)
FILE(GLOB QT_DLL_FILES ${QT_LIBRARY_DIR}/../bin/QtCore4.* 
											  ${QT_LIBRARY_DIR}/../bin/QtGui4.*
											  ${QT_LIBRARY_DIR}/../bin/QtOpenGL4.*
											  ${QT_LIBRARY_DIR}/../bin/QtXml4.*
											  ${QT_LIBRARY_DIR}/../bin/libgcc*
											  ${QT_LIBRARY_DIR}/../bin/mingw*)

MESSAGE(STATUS "Using Qt DLLs in ${QT_LIBRARY_DIR}/../bin/")
											  
FILE(GLOB WIN32_GCC_INCLUDE_FILES include/*.h)
FILE(GLOB WIN32_GCC_INCLUDE_SYS_FILES include/sys/*.h)
#FILE(GLOB WIN32_TCC_INCLUDE_WINAPI_FILES include/winapi/*.h)
FILE(GLOB WIN32_GCC_LIB_FILES lib/*.a lib/*.def)

INSTALL(FILES ${WIN32_GCC_FILES} DESTINATION win32)
INSTALL(FILES ${WIN32_GCC_INCLUDE_FILES} DESTINATION win32/include)
INSTALL(FILES ${WIN32_GCC_INCLUDE_SYS_FILES} DESTINATION win32/include/sys)
#INSTALL(FILES ${WIN32_TCC_INCLUDE_WINAPI_FILES} DESTINATION win32/include/winapi)
INSTALL(FILES ${WIN32_GCC_LIB_FILES} DESTINATION win32/lib)
INSTALL(FILES ${WIN32_DLL_FILES} DESTINATION bin/../)
INSTALL(FILES ${QT_DLL_FILES} DESTINATION bin/../)

ADD_SUBDIRECTORY(gnuplot)
