SET(LIBRARY_OUTPUT_PATH ${CPP_LIBRARY_OUTPUT_PATH})

FILE( GLOB MULTICELL_SRC *.cpp )
FILE( GLOB MULTICELL_HDRS *.h )

QT4_WRAP_CPP( MULTICELL_MOC ${MULTICELL_HDRS})

QT4_ADD_RESOURCES( MULTICELL_QRC multicell.qrc )

IF( APPLE AND BUILD_BUNDLE )
  
  SET( MACOSX_BUNDLE_SHORT_VERSION_STRING
      ${TINKERCELL_VERSION}
  )
  SET( MACOSX_BUNDLE_VERSION
      ${TINKERCELL_VERSION}
  )
  SET( MACOSX_BUNDLE_LONG_VERSION_STRING
      Version ${TINKERCELL_VERSION}
  )

  ADD_EXECUTABLE( MultiCell
    MACOSX_BUNDLE
    ${MULTICELL_SRC}
    ${MULTICELL_MOC}
    ${MULTICELL_QRC}
  )

  TARGET_LINK_LIBRARIES( MultiCell
    TinkerCellCore
  )
  
  INSTALL(TARGETS MultiCell 
    BUNDLE DESTINATION bin/../
    RUNTIME DESTINATION bin/../)

ELSE( APPLE AND BUILD_BUNDLE )
  IF( UNIX OR ( APPLE AND NOT BUILD_BUNDLE ) )
    ADD_EXECUTABLE( MultiCell
      ${MULTICELL_SRC}
      ${MULTICELL_MOC}
      ${MULTICELL_QRC}
    )

    TARGET_LINK_LIBRARIES( MultiCell
      TinkerCellCore
      ${QT_LIBRARIES}
    )
  ELSE( UNIX OR ( APPLE AND NOT BUILD_BUNDLE ) )
    IF( WIN32 )
	
	    ADD_EXECUTABLE( MultiCell WIN32 
        ${MULTICELL_SRC}
        ${MULTICELL_MOC}
        ${MULTICELL_QRC}
       )

      TARGET_LINK_LIBRARIES( MultiCell
        TinkerCellCore
        ${QT_LIBRARIES}
      )
    ENDIF( WIN32 )
  ENDIF( UNIX OR ( APPLE AND NOT BUILD_BUNDLE ) )

ENDIF( APPLE AND BUILD_BUNDLE )
